labs/Kubernetes/21_observability/hipstershop/k8s-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emailservice
spec:
  selector:
    matchLabels:
      app: emailservice
      product: hipster-shop
  template:
    metadata:
      labels:
        app: emailservice
        product: hipster-shop
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: gcr.io/dynatrace-demoability/emailservice:9e830c2
        ports:
        - containerPort: 8080
        readinessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8080"]
        livenessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8080"]
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: emailservice
spec:
  type: ClusterIP
  selector:
    app: emailservice
  ports:
  - name: grpc
    port: 5000
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkoutservice
spec:
  selector:
    matchLabels:
      app: checkoutservice
      product: hipster-shop
  template:
    metadata:
      labels:
        app: checkoutservice
        product: hipster-shop
    spec:
      containers:
        - name: server
          image: gcr.io/dynatrace-demoability/checkoutservice:9e830c2
          ports:
          - containerPort: 5050
          readinessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:5050"]
          livenessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:5050"]
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice
spec:
  type: ClusterIP
  selector:
    app: checkoutservice
  ports:
  - name: grpc
    port: 5050
    targetPort: 5050
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendationservice
spec:
  selector:
    matchLabels:
      app: recommendationservice
      product: hipster-shop
  template:
    metadata:
      labels:
        app: recommendationservice
        product: hipster-shop
    spec:
      terminationGracePeriodSeconds: 5
 # imagePullsecrets required for perform2019????      
      imagePullSecrets:
        - name: demo-registry
      containers:
      - name: server
        image: gcr.io/dynatrace-demoability/recommendationservice:9e830c2
        ports:
        - containerPort: 8080
        readinessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8080"]
        livenessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8080"]
        resources:
          requests:
            cpu: 100m
            memory: 220Mi
---
apiVersion: v1
kind: Service
metadata:
  name: recommendationservice
spec:
  type: ClusterIP
  selector:
    app: recommendationservice
  ports:
  - name: grpc
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
      product: hipster-shop
  template:
    metadata:
      labels:
        app: frontend
        product: hipster-shop
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      containers:
        - name: server
          # both look good
          #image: registry.lab.dynatrace.org/cloudplatform/hipster-shop-frontend
          image: gcr.io/dynatrace-demoability/frontend:9e830c2
          ports:
          - containerPort: 8080
          readinessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/_healthz"
              port: 8080
              httpHeaders:
              - name: "Cookie"
                value: "shop_session-id=x-readiness-probe"
          livenessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/_healthz"
              port: 8080
              httpHeaders:
              - name: "Cookie"
                value: "shop_session-id=x-liveness-probe"
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onlineboutique-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host :  "20.31.37.89.nip.io"
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/"
            backend:
              service:
                name: frontend
                port:
                  number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentservice
spec:
  selector:
    matchLabels:
      app: paymentservice
      product: hipster-shop
  template:
    metadata:
      labels:
        app: paymentservice
        product: hipster-shop
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: gcr.io/dynatrace-demoability/paymentservice:9e830c2
        ports:
        - containerPort: 50051
        readinessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:50051"]
        livenessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:50051"]
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: paymentservice
spec:
  type: ClusterIP
  selector:
    app: paymentservice
  ports:
  - name: grpc
    port: 50051
    targetPort: 50051
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productcatalogservice
spec:
  selector:
    matchLabels:
      app: productcatalogservice
      product: hipster-shop
  template:
    metadata:
      labels:
        app: productcatalogservice
        product: hipster-shop
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        # image: registry.lab.dynatrace.org/cloudplatform/hipster-shop-productcatalogservice
        image: gcr.io/dynatrace-demoability/productcatalogservice:dd747d8-dirty
        ports:
        - containerPort: 3550
        readinessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:3550"]
        livenessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:3550"]
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: productcatalogservice
spec:
  type: ClusterIP
  selector:
    app: productcatalogservice
  ports:
  - name: grpc
    port: 3550
    targetPort: 3550
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartservice
spec:
  selector:
    matchLabels:
      app: cartservice
      product: hipster-shop
  template:
    metadata:
      labels:
        app: cartservice
        product: hipster-shop
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: gcr.io/dynatrace-demoability/cartservice:original
        ports:
        - containerPort: 7070
        resources:
          requests:
            cpu: 200m
            memory: 128Mi
        readinessProbe:
          initialDelaySeconds: 15
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:7070", "-rpc-timeout=5s"]
        livenessProbe:
          initialDelaySeconds: 15
          periodSeconds: 10
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:7070", "-rpc-timeout=5s"]
---
apiVersion: v1
kind: Service
metadata:
  name: cartservice
spec:
  type: ClusterIP
  selector:
    app: cartservice
  ports:
  - name: grpc
    port: 7070
    targetPort: 7070
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgenerator
spec:
  selector:
    matchLabels:
      app: loadgenerator
      product: hipster-shop
  replicas: 1
  template:
    metadata:
      labels:
        app: loadgenerator
        product: hipster-shop
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      terminationGracePeriodSeconds: 5
      restartPolicy: Always
      containers:
      - name: main
        image: gcr.io/dynatrace-demoability/loadgenerator:9e830c2
        resources:
          requests:
            cpu: 300m
            memory: 256Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currencyservice
spec:
  selector:
    matchLabels:
      app: currencyservice
      product: hipster-shop
  template:
    metadata:
      labels:
        app: currencyservice
        product: hipster-shop
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: gcr.io/dynatrace-demoability/currencyservice:9e830c2
        ports:
        - name: grpc
          containerPort: 7000
        readinessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:7000"]
        livenessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:7000"]
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: currencyservice
spec:
  type: ClusterIP
  selector:
    app: currencyservice
  ports:
  - name: grpc
    port: 7000
    targetPort: 7000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shippingservice
spec:
  selector:
    matchLabels:
      app: shippingservice
      product: hipster-shop
  template:
    metadata:
      labels:
        app: shippingservice
        product: hipster-shop
    spec:
      containers:
      - name: server
        image: gcr.io/dynatrace-demoability/shippingservice:9e830c2
        ports:
        - containerPort: 50051
        readinessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:50051"]
        livenessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:50051"]
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: shippingservice
spec:
  type: ClusterIP
  selector:
    app: shippingservice
  ports:
  - name: grpc
    port: 50051
    targetPort: 50051
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cart
spec:
  selector:
    matchLabels:
      app: redis-cart
      product: hipster-shop
  template:
    metadata:
      labels:
        app: redis-cart
        product: hipster-shop
      annotations: # here we annotate the deployment to be scraped by dynatrace
        prometheus.io/port: '9121'
        prometheus.io/scrape: 'true'
        metrics.dynatrace.com/port: '9121'
        metrics.dynatrace.com/scrape: 'true'
    spec:
      containers:
      - name: redis
        image: redis:alpine
        ports:
        - containerPort: 6379
        readinessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 6379
        livenessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 6379
        volumeMounts:
        - mountPath: /data
          name: redis-data
        resources:
          requests:
            cpu: 70m
            memory: 200Mi
      - name: redis-exporter
        image: 'oliver006/redis_exporter:latest'
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
          - containerPort: 9121
            protocol: TCP
      volumes:
      - name: redis-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cart
spec:
  type: ClusterIP
  selector:
    app: redis-cart
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adservice
spec:
  selector:
    matchLabels:
      app: adservice
      product: hipster-shop
  template:
    metadata:
      labels:
        app: adservice
        product: hipster-shop
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: gcr.io/dynatrace-demoability/adservice:9e830c2
        ports:
        - containerPort: 9555
        resources:
          requests:
            cpu: 200m
            memory: 180Mi
        readinessProbe:
          initialDelaySeconds: 20
          periodSeconds: 15
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:9555"]
        livenessProbe:
          initialDelaySeconds: 20
          periodSeconds: 15
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:9555"]
---
apiVersion: v1
kind: Service
metadata:
  name: adservice
spec:
  type: ClusterIP
  selector:
    app: adservice
  ports:
  - name: grpc
    port: 9555
    targetPort: 9555
---
